# qaguru-python-advanced

./: Dockerfile  README.md  config.py  conftest.py  docker-compose.yml  main.py  pyproject.toml  reqres_service.py  requirements.txt  test_users.py  users.json  utils.py
app/: main.py
app/database/: engine.py  users.py
app/models/: User.py
app/routers/: status.py  users.py
fixtures/: fixtures.py  helper.py
tests/: conftest.py  test_api.py  test_smoke.py
utils/: base_session.py
